--- a/index.html
+++ b/index.html
@@ -81,24 +81,16 @@
   
   <footer>
     <section class="sub_area">
-      <div class="footer_logo">
-        <a href="https://tcut-sci-tech.github.io/top/"><img src="tcut.jpg" width="100%"></a>
-      </div>
       <nav>
         <ul>
           <div class="flex_div">
-            <div class="b_div">
+            <div class="e_div">
+              <a href="https://tcut-sci-tech.github.io/top/"><img src="tcut.jpg" width="100%"></a>
+            </div>
+            <div class="f_div">
               <li><a href="https://tcut-sci-tech.github.io/top/">東京都市大学等々力中学校高等学校 理科部 ホームページ</a></li>
-            </div>
-            <div class="b_div">
               <li><a href="https://twitter.com/tcut_sci_tech">東京都市大学等々力中学校高等学校 理科部 Twitter</a></li>
-            </div>
-          </div>
-          <div class="flex_div">
-            <div class="b_div">
               <li><a href="https://www.tcu-todoroki.ed.jp/">東京都市大学等々力中学校高等学校 ホームページ</a></li>
-            </div>
-            <div class="b_div">
               <li><a href="https://aigirisai-2021.com">東京都市大学等々力中学校高等学校 藍桐祭 ホームページ</a></li>
             </div>
           </div>
