--- a/index.html
+++ b/index.html
@@ -17,6 +17,23 @@
   <section class="wrap_top">
     <div id="content">
 			<p id="mainImg"><img src="ｻｲｴﾝｽﾉﾊﾅ.jpg" width="100%" height="auto"></p>
+      <div class="side_area topPage">
+        <div id="navBtn">
+          <span class="top"></span>
+          <span class="bottom"></span>
+        </div>
+        <script type="text/javascript">include("parts/nav.html");</script>
+        <nav>
+          <ul class="pc">
+            <li><a href="https://tcut-sci-tech.github.io/aigirisai21/">TOP<span>トップ</a></span></li>
+            <li><a href="https://tcut-sci-tech.github.io/aigirisai21-biology/">BIOLOGY LABORATORY<span>生物室</a></span></li>
+            <li><a href="https://tcut-sci-tech.github.io/aigirisai21-chemistry/">CHEMISTRY LABORATORY<span>化学室</a></span></li>
+            <li><a href="https://tcut-sci-tech.github.io/aigirisai21-ground/">GROUND<span>校庭</a></span></li>
+            <li><a href="https://forms.gle/kDEtCWHZENpvRtzt8">QUESTION<span>アンケート</a></span></li>
+            <li><a href=""><span></a></span></li>
+          </ul>
+        </nav>
+      </div>
     </div>
   </section>
   
@@ -27,6 +44,40 @@
     <h1>特別展 サイヱンスノハナ</h1>
       <div class="mission">
         <p class="txt4">新型コロナウイルスの感染が拡大している状況を鑑み、誠に勝手ながらすべての体験型展示や科学体験教室は中止とさせていただきます。<br>何とぞご理解のほどよろしくお願い申し上げます。</p>
+      </div>
+      <div class="flex_div">
+        <div class="a_div">
+          <div class="btn timelink">
+            <a href="https://tcut-sci-tech.github.io/aigirisai21-biology-vertebrate/" class="main"><b>脊椎動物研究班 展示</b></a>
+          </div>
+        </div>
+        <div class="a_div">
+          <div class="btn timelink">
+            <a href="https://tcut-sci-tech.github.io/aigirisai21-biology-insect/" class="main"><b>昆虫調査班 展示</b></a>
+          </div>
+        </div>
+        <div class="a_div">
+          <div class="btn timelink">
+            <a href="https://tcut-sci-tech.github.io/aigirisai21-biology-aquatic/" class="main"><b>水棲生物調査班 展示</b></a>
+          </div>
+        </div>
+      </div>
+      <div class="flex_div">
+        <div class="a_div">
+          <div class="btn timelink">
+            <a href="https://tcut-sci-tech.github.io/aigirisai21-biology-astoro/" class="main"><b>天文班 展示</b></a>
+          </div>
+        </div>
+        <div class="a_div">
+          <div class="btn timelink">
+            <a href="https://tcut-sci-tech.github.io/aigirisai21-biology-tech/" class="main"><b>技術班 展示</b></a>
+          </div>
+        </div>
+        <div class="a_div">
+          <div class="btn timelink">
+            <a href="https://tcut-sci-tech.github.io/aigirisai21-chemistry/" class="main"><b>科学体験教室</b></a>
+          </div>
+        </div>
       </div>
   </section>
 
@@ -74,7 +125,7 @@
   <section class="detail_area sub_area date_area">
     <h2>ACCESS MAP</h2>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3243.560563334317!2d139.6498738152139!3d35.61390488020995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018f4f7bc55522f%3A0xd108ecc848d5815e!2z5p2x5Lqs6YO95biC5aSn5a2m562J44CF5Yqb5Lit5a2m5qCh44O76auY562J5a2m5qCh!5e0!3m2!1sja!2sjp!4v1628150304124!5m2!1sja!2sjp" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-    <p class="txt"><br>【住所】東京都世田谷区等々力８丁目10-１<br>【電車】東急大井町線　等々力駅　下車 徒歩10分<br>【バス】黒02系統　都市大等々力キャンパス前　下車 徒歩１分<br>　　　　渋82系統　玉川警察署前　下車 徒歩５分<br>　　　　等11系統　玉川警察署前　下車 徒歩５分<br>　　　　等12系統　玉川警察署前　下車 徒歩５分<br>　　　　東98系統　都市大等々力キャンパス前　下車 徒歩１分<br><br><b>＊駐車場がありませんので、お車でのご来校はご遠慮ください。なお、学校周辺の道路は、駐車禁止となっております。</b></p>
+    <p class="txt"><br>【住所】東京都世田谷区等々力８丁目10-１<br>【電車】東急大井町線　等々力駅　下車 徒歩10分<br>【バス】黒02系統　都市大等々力キャンパス前　下車 徒歩１分<br>　　　　渋82系統　玉川警察署前　下車 徒歩５分<br>　　　　等11系統　玉川警察署前　下車 徒歩５分<br>　　　　等12系統　玉川警察署前　下車 徒歩５分<br>　　　　東98系統　都市大等々力キャンパス前　下車 徒歩１分<br><br><b>＊ 駐車場がありませんので、お車でのご来校はご遠慮ください。なお、学校周辺の道路は、駐車禁止となっております。</b></p>
   </section>
 
   
