--- a/index.html
+++ b/index.html
@@ -79,6 +79,21 @@
           </div>
         </div>
       </div>
+      <div class="flex_div">
+        <div class="a_div">
+          <div class="btn timelink">
+          </div>
+        </div>
+        <div class="a_div">
+          <div class="btn timelink">
+            <a href="第75回藍桐祭パンフレット.pdf" class="main"><b>第75回 藍桐祭 パンフレット</b></a>
+          </div>
+        </div>
+        <div class="a_div">
+          <div class="btn timelink">
+          </div>
+        </div>
+      </div>
   </section>
 
   
