--- a/index.html
+++ b/index.html
@@ -82,11 +82,12 @@
       <div class="flex_div">
         <div class="a_div">
           <div class="btn timelink">
+            <a href="第75回藍桐祭パンフレット.pdf" class="main"><b>第75回 藍桐祭 パンフレット</b></a>
           </div>
         </div>
         <div class="a_div">
           <div class="btn timelink">
-            <a href="第75回藍桐祭パンフレット.pdf" class="main"><b>第75回 藍桐祭 パンフレット</b></a>
+            <a href="https://tcut-sci-tech.github.io/aigirisai21-360/" class="main"><b>360° パノラマ写真</b></a>
           </div>
         </div>
         <div class="a_div">
