--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 </head>
 
 <body id="top">
-  <div id="content">
-    <p id="mainImg"><img src="404 Page not found.jpg" width="100%" height="auto"></p>
-  </div>
+  <section class="sub_area">
+    <div id="content">
+      <p id="mainImg"><img src="404 Page not found.jpg" width="100%" height="auto"></p>
+    </div>
+  </section>
   
   
 <footer>
