--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 
 <body id="top">
+    <div id="content">
+      <p id="mainImg"><img src="404 Page not found.jpg" width="100%" height="auto"></p>
+    </div>
   
   
 <footer>
@@ -16,10 +19,10 @@
       <nav>
         <ul>
           <div class="flex_div">
-            <div class="a_div">
+            <div class="e_div">
               <a href=""><img src="tcut.jpg" width="100%"></a>
             </div>
-            <div class="b_div">
+            <div class="f_div">
               <li><a href="https://tcut-sci-tech.github.io/top/">東京都市大学等々力中学校高等学校 理科部 ホームページ</a></li>
               <li><a href="https://twitter.com/tcut_sci_tech">東京都市大学等々力中学校高等学校 理科部 Twitter</a></li>
               <li><a href="https://www.tcu-todoroki.ed.jp/">東京都市大学等々力中学校高等学校 ホームページ</a></li>
