--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <ul>
           <div class="flex_div">
             <div class="e_div">
-              <a href=""><img src="tcut.jpg" width="100%"></a>
+              <a href="https://tcut-sci-tech.github.io/top/"><img src="tcut.jpg" width="100%"></a>
             </div>
             <div class="f_div">
               <li><a href="https://tcut-sci-tech.github.io/top/">東京都市大学等々力中学校高等学校 理科部 ホームページ</a></li>
