--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="404 Page not found" content="TCU Todoroki Science Research Club">
 	<meta name="viewport" content="width=device-width">
 	<title>404 Page not found</title>
+  <link rel="stylesheet" media="all" href="css/style.css">
 </head>
 
 <body id="top">
