--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
   justify-content: center;
 }
 
-.e_div {
+.a_div {
   display: inline-block;
   width: 40%;
   padding:0vw;
   margin: 0vw 1vw 0vw 1vw;
 }
 
-.e_div img {
+.a_div img {
   display: inline-block;
 	width: 20%;
 	height: auto;
 }
 
-.f_div {
+.b_div {
   display: inline-block;
   width: 70%;
   padding:0vw;
@@ -24,7 +24,7 @@
   text-align: left;
 }
 
-.f_div img {
+.b_div img {
   display: inline-block;
 	width: 100%;
 	height: auto;
