--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 </head>
 
 <body id="top">
-    <div id="content">
-      <p id="mainImg"><img src="404 Page not found.jpg" width="100%" height="auto"></p>
-    </div>
+  <img src="404 Page not found.jpg" width="100%" height="auto">
   
   
 <footer>
@@ -21,7 +19,7 @@
         <ul>
           <div class="flex_div">
             <div class="a_div">
-              <a href=""><img src="tcut.jpg" width="100%"></a>
+              <img src="tcut.jpg" width="100%">
             </div>
             <div class="b_div">
               <li><a href="https://tcut-sci-tech.github.io/top/">東京都市大学等々力中学校高等学校 理科部 ホームページ</a></li>
