--- a/index.html
+++ b/index.html
@@ -14,24 +14,24 @@
   
   
 <footer>
-    <section class="sub_area">
-      <nav>
-        <ul>
-          <div class="flex_div">
-            <div class="a_div">
-              <img src="tcut.jpg" width="100%">
-            </div>
-            <div class="b_div">
-              <li><a href="https://tcut-sci-tech.github.io/top/">東京都市大学等々力中学校高等学校 理科部 ホームページ</a></li>
-              <li><a href="https://twitter.com/tcut_sci_tech">東京都市大学等々力中学校高等学校 理科部 Twitter</a></li>
-              <li><a href="https://www.tcu-todoroki.ed.jp/">東京都市大学等々力中学校高等学校 ホームページ</a></li>
-            </div>
+  <section class="sub_area">
+    <nav>
+      <ul>
+        <div class="flex_div">
+          <div class="e_div">
+            <img src="tcut.jpg" width="100%">
           </div>
-          <br><b>Copyright© TCcU Todoroki Science Research Club , All Rights Reserved.</b>
-        </ul>
-      </nav>
-    </section>
-  </footer>
+          <div class="f_div">
+            <li><a href="https://tcut-sci-tech.github.io/top/">東京都市大学等々力中学校高等学校 理科部 ホームページ</a></li>
+            <li><a href="https://twitter.com/tcut_sci_tech">東京都市大学等々力中学校高等学校 理科部 Twitter</a></li>
+            <li><a href="https://www.tcu-todoroki.ed.jp/">東京都市大学等々力中学校高等学校 ホームページ</a></li>
+          </div>
+        </div>
+        <br><b>Copyright©TCU Todoroki Science Research Club , All Rights Reserved.</b>
+      </ul>
+    </nav>
+  </section>
+</footer>
    
   
    
