--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <li><a href="https://www.tcu-todoroki.ed.jp/">東京都市大学等々力中学校高等学校 ホームページ</a></li>
           </div>
         </div>
-        <br><b>Copyright©tTCU Todoroki Science Research Club , All Rights Reserved.</b>
+        <br><b>Copyright©TCU Todoroki Science Research Club , All Rights Reserved.</b>
       </ul>
     </nav>
   </section>
