--- a/index.html
+++ b/index.html
@@ -1,38 +1,31 @@
 <html>
   
 <html lang="ja">
+
 <head>
-	<meta charset="UTF-8">
+  <meta charset="UTF-8">
 	<meta name="404 Page not found" content="TCU Todoroki Science Research Club">
-	<meta name="viewport" content="width=device-width">
 	<title>404 Page not found</title>
+  <font face="メイリオ">
   <link rel="stylesheet" media="all" href="css/style.css">
 </head>
 
 <body id="top">
   <img src="404 Page not found.jpg" width="100%" height="auto">
   
+  <div class="sec01">
+    <br><div class="flex_div">
+      <div class="a_div">
+        <img src="tcut.jpg" width="100%" height="auto">
+      </div>
+      <div class="b_div">
+        <br><txt><a href="https://tcut-sci-tech.github.io/top/"><b>東京都市大学等々力中学校高等学校 理科部 ホームページ</b></a></txt><br>
+        <txt><a href="https://twitter.com/tcut_sci_tech"><b>東京都市大学等々力中学校高等学校 理科部 Twitter</b></a></txt><br>
+        <txt><a href="https://www.tcu-todoroki.ed.jp/"><b>東京都市大学等々力中学校高等学校 ホームページ</b></a></txt><br>
+      </div>
+    </div>
+    <h1>Copyright©TCU Todoroki Science Research Club , All Rights Reserved.</h1><br>
+  </div>
+</body>
   
-<footer>
-  <section class="sub_area">
-    <nav>
-      <ul>
-        <div class="flex_div">
-          <div class="e_div">
-            <img src="tcut.jpg" width="100%">
-          </div>
-          <div class="f_div">
-            <li><a href="https://tcut-sci-tech.github.io/top/">東京都市大学等々力中学校高等学校 理科部 ホームページ</a></li>
-            <li><a href="https://twitter.com/tcut_sci_tech">東京都市大学等々力中学校高等学校 理科部 Twitter</a></li>
-            <li><a href="https://www.tcu-todoroki.ed.jp/">東京都市大学等々力中学校高等学校 ホームページ</a></li>
-          </div>
-        </div>
-        <br><b>Copyright©TCU Todoroki Science Research Club , All Rights Reserved.</b>
-      </ul>
-    </nav>
-  </section>
-</footer>
-   
-  
-   
-</body></html>
+</html>
