--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
   <div class="sec01">
     <br><div class="flex_div">
       <div class="a_div">
-        <img src="tcut.jpg" width="100%" height="auto">
+        <img src="https://tcut-sci-tech.github.io/aigirisai21/tcut.jpg" width="100%" height="auto">
       </div>
       <div class="b_div">
-        <br><txt><a href="https://tcut-sci-tech.github.io/top/"><b>東京都市大学等々力中学校高等学校 理科部 ホームページ</b></a></txt><br>
-        <txt><a href="https://twitter.com/tcut_sci_tech"><b>東京都市大学等々力中学校高等学校 理科部 Twitter</b></a></txt><br>
-        <txt><a href="https://www.tcu-todoroki.ed.jp/"><b>東京都市大学等々力中学校高等学校 ホームページ</b></a></txt><br>
+        <br><a href="https://tcut-sci-tech.github.io/top/">東京都市大学等々力中学校高等学校 理科部 ホームページ</a><br>
+        <a href="https://twitter.com/tcut_sci_tech">東京都市大学等々力中学校高等学校 理科部 Twitter</a><br>
+        <a href="https://www.tcu-todoroki.ed.jp/">東京都市大学等々力中学校高等学校 ホームページ</a><br>
       </div>
     </div>
     <h1>Copyright©TCU Todoroki Science Research Club , All Rights Reserved.</h1><br>
