--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="sec01">
     <br><div class="flex_div">
       <div class="a_div">
-        <img src="https://tcut-sci-tech.github.io/aigirisai21/tcut.jpg" width="100%" height="auto">
+        <img src="tcut.jpg" width="100%" height="auto">
       </div>
       <div class="b_div">
         <br><a href="https://tcut-sci-tech.github.io/top/">東京都市大学等々力中学校高等学校 理科部 ホームページ</a><br>
