--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         <img src="tcut.jpg" width="100%" height="auto">
       </div>
       <div class="b_div">
-        <br><a href="https://tcut-sci-tech.github.io/top/">東京都市大学等々力中学校高等学校 理科部 ホームページ</a><br>
+        <a href="https://tcut-sci-tech.github.io/top/">東京都市大学等々力中学校高等学校 理科部 ホームページ</a><br>
         <a href="https://twitter.com/tcut_sci_tech">東京都市大学等々力中学校高等学校 理科部 Twitter</a><br>
         <a href="https://www.tcu-todoroki.ed.jp/">東京都市大学等々力中学校高等学校 ホームページ</a><br>
       </div>
     </div>
-    <h1>Copyright©TCU Todoroki Science Research Club , All Rights Reserved.</h1><br>
+    <h1>Copyright©TCU Todoroki Science Research Club , All Rights Reserved.</h1>
   </div>
 </body>
   
