--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
 	<meta name="404 Page not found" content="TCU Todoroki Science Research Club">
 	<title>404 Page not found</title>
-  <font face="メイリオ">
+  <font face="Meiryo">
   <link rel="stylesheet" media="all" href="css/style.css">
 </head>
 
@@ -24,7 +24,7 @@
         <a href="https://www.tcu-todoroki.ed.jp/">東京都市大学等々力中学校高等学校 ホームページ</a><br>
       </div>
     </div>
-    <h1>Copyright©TCU Todoroki Science Research Club , All Rights Reserved.</h1>
+    <h1>Copyright©TCU Ttodoroki Science Research Club , All Rights Reserved.</h1>
   </div>
 </body>
   
