--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta charset="UTF-8">
 	<meta name="404 Page not found" content="TCU Todoroki Science Research Club">
 	<title>404 Page not found</title>
-  <font face="Meiryo">
   <link rel="stylesheet" media="all" href="css/style.css">
 </head>
 
@@ -14,17 +13,17 @@
   <img src="404 Page not found.jpg" width="100%" height="auto">
   
   <div class="sec01">
-    <br><div class="flex_div">
+    <div class="flex_div">
       <div class="a_div">
-        <img src="tcut.jpg" width="100%" height="auto">
+        <img src="https://tcut-sci-tech.github.io/aigirisai21/tcut.jpg" width="100%" height="auto">
       </div>
       <div class="b_div">
-        <a href="https://tcut-sci-tech.github.io/top/">東京都市大学等々力中学校高等学校 理科部 ホームページ</a><br>
+        <br><a href="https://tcut-sci-tech.github.io/top/">東京都市大学等々力中学校高等学校 理科部 ホームページ</a><br>
         <a href="https://twitter.com/tcut_sci_tech">東京都市大学等々力中学校高等学校 理科部 Twitter</a><br>
         <a href="https://www.tcu-todoroki.ed.jp/">東京都市大学等々力中学校高等学校 ホームページ</a><br>
       </div>
     </div>
-    <h1>Copyright©TCU Ttodoroki Science Research Club , All Rights Reserved.</h1>
+    <h1>Copyright©TCU Todoroki Science Research Club , All Rights Reserved.</h1>
   </div>
 </body>
   
