--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
 	<meta name="404 Page not found" content="TCU Todoroki Science Research Club">
 	<title>404 Page not found</title>
   <link rel="stylesheet" media="all" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/reset.css">
 </head>
 
 <body id="top">
   <img src="404 Page not found.jpg" width="100%" height="auto">
+  
+  <div style="text-align: center">
+    <a href="https://tcut-sci-tech.github.io/aigirisai/" class="btn06 btnarrow2">理科部 藍桐祭特設ページ</a>
+  </div><br>
   
   <div class="sec01">
     <div class="flex_div">
