--- a/index.html
+++ b/index.html
@@ -1,34 +1,52 @@
 <html>
-  
+
 <html lang="ja">
+
 
 <head>
   <meta charset="UTF-8">
-	<meta name="404 Page not found" content="TCU Todoroki Science Research Club">
-	<title>404 Page not found</title>
+	<meta name="東京都市大学等々力中学校高等学校　理科部 藍桐祭特設ページ" content="TCU Todoroki Science Research Club">
+  <meta http-equiv="refresh" content="5;URL=https://tcut-sci-tech.github.io/aigirisai/">
+	<title>理科部 藍桐祭特設ページの移転案内</title>
   <link rel="stylesheet" media="all" href="css/style.css">
   <link rel="stylesheet" type="text/css" href="css/reset.css">
 </head>
-
-<body id="top">
-  <img src="404 Page not found.jpg" width="100%" height="auto">
-  <br><div style="text-align: center">
-    <a href="https://tcut-sci-tech.github.io/aigirisai/" class="btn06 btnarrow2">このボタンをクリックして下さい</a>
-  </div><br>
   
+  
+<body>
   <div class="sec01">
     <div class="flex_div">
-      <div class="a_div">
+      <div class="a_div"></div>
+      <div class="b_div">
+        <br><h1>理科部 藍桐祭特設ページの移転案内</h1><h2>５秒後に新しい理科部 藍桐祭特設ページに移動します。</h2>
+        <img src="aigirisai2021.png" width="100%" height="auto">
+        <br><txt1>理科部 藍桐祭特設ページのURLが変更されました。<br><br><b>旧 URL）</b>https://tcut-sci-tech.github.io/aigirisai21/<br><b>新 URL）</b>https://tcut-sci-tech.github.io/aigirisai/</txt1>
+      </div>
+      <div class="a_div"></div>
+    </div><br>
+  </div>
+  
+  <div class="sec02">
+    <div class="flex_div">
+      <div class="c_div">
         <img src="tcut.jpg" width="100%" height="auto">
       </div>
-      <div class="b_div">
-        <br><a href="https://tcut-sci-tech.github.io/top/">東京都市大学等々力中学校高等学校 理科部 ホームページ</a><br>
-        <a href="https://twitter.com/tcut_sci_tech">東京都市大学等々力中学校高等学校 理科部 Twitter</a><br>
-        <a href="https://www.tcu-todoroki.ed.jp/">東京都市大学等々力中学校高等学校 ホームページ</a><br>
+      <div class="d_div">
+        <br><div class="sci op">
+					<a href="https://tcut-sci-tech.github.io/top/" target="_blank" rel="noopener noreferrer">東京都市大学等々力中学校高等学校 理科部 HP</a><br>
+				</div>
+        <div class="twitter op">
+					<a href="https://twitter.com/tcut_sci_tech" target="_blank" rel="noopener noreferrer">東京都市大学等々力中学校高等学校 理科部 Twitter</a><br>
+				</div>
+				<div class="tcu op">
+					<a href="https://www.tcu-todoroki.ed.jp/" target="_blank" rel="noopener noreferrer">東京都市大学等々力中学校高等学校 HP</a><br>
+				</div>
       </div>
     </div>
-    <h1>Copyright©TCU Todoroki Science Research Club , All Rights Reserved.</h1>
+    <h3>Copyright©TCU Todoroki Science Research Club , All Rights Reserved.</h3>
   </div>
+  
+  
 </body>
   
 </html>
